# QueryCraft

./: .code-workspace  .dockerignore  .env  .env.dev.example  .gitignore  .trigger-deploy  AI_SQL_GENERATION_SUMMARY.md  CLAUDE.md  DESIGN_TOKENS_GUIDE.md  IMPLEMENTATION_COMPLETE.md  README.md  backend_digests.txt  config.py  docker-compose.dev.yml  docker-compose.yml  final_to_delete.txt  frontend_digests.txt  gemini_test.py  package-lock.json  practice.py  pyproject.toml  requirements.txt  test_gemini.py  test_phase1.sh  test_unified_generator.py  untagged_to_delete.txt
.claude/: PROJECT_ANALYSIS.md
.github/: DEPLOYMENT_TRIGGER.txt
.omc/: ralplan-state.json  ultraqa-state.json  ultrawork-state.json
.sisyphus/: continuation-count.json
backend/: Dockerfile  __init__.py  main.py  scheduler.py  test_daily_challenge_writer.py  test_scenario_generator.py  test_unified_problem_generator.py
common/: logging.py
config/: db.py
dashboard/: app.py
docs/: AI_FEATURES_SPEC.md  ANALYTICS_GUIDE.md  CORE_ENGINE_GUIDE.md  DEVELOPMENT_GUIDE.md  EVENT_DESIGN_GUIDELINE.md  EVENT_TRACKING_GUIDE.md  FUTURE_PLAN.md  FUTURE_ROADMAP.md  GCP_DEPLOYMENT_GUIDE.md  GENERATOR_GUIDE.md  IMPLEMENTATION_PLAN.md  JULES_CLI_GUIDE.md  KPI_TRACKING_PLAN.md  MCP_INTEGRATION.md  MIXPANEL_DASHBOARD_TEMPLATES.md  PATCH_NOTES.md  QUERYCRAFT_SERVICE_AI_GUIDE.md  RCA_UPGRADE_WALKTHROUGH.md  README.md  REFERENCE_WIKI.md  SCHEDULER_FIX_PLAN.md  SERVICE_STRUCTURE.md  SQL_Labs_lexicon_data_2026_01_02_01_30_27.csv  TECH_WIKI.md  TODO-list.md  TODO_LIST.md  WALKTHROUGH.md  WIKI_INDEX.md  (+3 more)
sql/: init.sql  (+1 more)
(+270 files in other folders)
